--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,8 @@
 
 <section class="blz-app">
-  <header>
-    <h1 class="text-3xl font-bold underline">
-      Hello world!
-    </h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  <app-header></app-header>
   <main>
-    Main content.
+    <router-outlet></router-outlet>
   </main>
-  <footer>
-    <p>
-      &copy;2022 Company Inc. All Rights Reserved.
-    </p>
-  </footer>
+  <app-footer></app-footer>
 </section>
-<router-outlet></router-outlet>
