--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,10 @@
-.is-active{
-    text-decoration:underline;
+.nav-mobile {
+    display:none;
+}
+@media only screen and (max-width: 1023px){
+
+    .nav-mobile {
+        display: block;
+    }
+
 }
