--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,15 @@
         <div class="lg:flex lg:items-center lg:gap-x-16">
             <div class="space-y-8 lg:w-7/12">
                 <h1 class=" font-bold text-gray-900 text-4xl md:text-5xl">
-                    Run successful remote and hybrid teams
+                    Welcome to Fire for Angular.
                 </h1>
+
                 <p class="text-gray-600 lg:w-11/12">
-                    DailyBot takes chat and collaboration to the next level: daily standups, team check-ins, surveys, kudos, best companion bot for your virtual watercooler, 1:1 intros, motivation tracking and more.
+                    This is a boilerplate for Angular with many bells and whistles included. Have a look around, and make yourself at home. 
                 </p>
 
                 <span class="block font-semibold">
-                    The best companion bot for your chat app.
+                    We are thrilled to be able to help you realize your goal!
                 </span>
 
                 <div class="grid grid-cols-3 space-x-4 md:space-x-6 md:flex">
@@ -36,18 +37,18 @@
 
                 <div>
                     🔥🌟 
-                    <span>Other integrations :</span> 
-                    <a href="#" class="font-semibold text-gray-700">
-                        Discord,
+                    <span>Other integrations:</span> 
+                    <a href="https://fire-react.netlify.app/" target="_blank" class="font-semibold text-gray-700">
+                        React,
                     </a>
-                    <a href="#" class="font-semibold text-gray-700">
-                        Telegram
+                    <a href="https://fire-svelte.netlify.app/" target="_blank" class="font-semibold text-gray-700">
+                        Svelte
                     </a>
                 </div>
             </div>
 
             <div hidden class="lg:block lg:w-5/12">
-                <img src="https://blazed.sirv.com/logo/Lockscreen-Beaker.png?w=320&h=280" class="w-full" alt="wath illustration" loading="lazy" width="320" height="280">
+                <img src="https://blazed.sirv.com/logo/Lockscreen-Beaker.png?w=320&h=280" class="w-full" width="320" height="280">
             </div>
         </div>
     </div>
@@ -77,9 +78,6 @@
                 </div>
                 <div class="flex items-center">
                     <img src="https://blazed.sirv.com/logo/Beaker-Pink.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Blue.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
                 </div>
             </div>
         </div>
