--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
                 <div class="w-full flex justify-between lg:w-auto">
 
                     <a href="/" title="Fire Angular" aria-label="logo">
-                        <img src="https://blazed.sirv.com/logo/Beaker-Dark.png?w=45&h=45" width="45" height="45">
+                        <img src="https://blazed.sirv.com/logo/Beaker-Dark.png?w=45&h=45" class="hover:opacity-75" width="45" height="45">
                     </a>
 
                     <button (click)="burgerVisible = !burgerVisible" aria-label="humburger" id="hamburger" class="relative w-10 h-10 -mr-2 lg:hidden">
@@ -31,19 +31,19 @@
 
                         <ul class="border-t space-y-2 pt-2 lg:space-y-0 lg:space-x-2 lg:pt-0 lg:pl-2 lg:border-t-0 lg:border-l lg:items-center lg:flex">
                             <li>
-                                <button type="button" title="Start buying" class="w-full py-3 px-6 rounded-md text-center transition active:bg-sky-200 focus:bg-sky-100 sm:w-max">
+                                <a href="https://blazed.space/" class="flex w-full py-3 px-6 rounded-md text-center transition active:bg-sky-200 focus:bg-sky-100 sm:w-max">
                                     <span class="block text-cyan-600 font-semibold">
-                                        Sign in
+                                        Space
                                     </span>
-                                </button>
+                                </a>
                             </li>
 
                             <li>
-                                <button type="button" title="Start buying" class="w-full py-3 px-6 rounded-md text-center transition bg-cyan-500 hover:bg-cyan-600 active:bg-cyan-700 focus:bg-sky-600 sm:w-max">
+                                <a href="https://blz.one/" class="flex w-full py-3 px-6 rounded-md text-center transition bg-cyan-500 hover:bg-cyan-600 active:bg-cyan-700 focus:bg-sky-600 sm:w-max">
                                     <span class="block text-white font-semibold">
-                                        Try it for free
+                                        One
                                     </span>
-                                </button>
+                                </a>
                             </li>
                         </ul>
                     </div>
