--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,30 +7,37 @@
         </a>
     </li>
     <li>
-        <a href="#" class="block md:px-3">
+        <a href="https://www.blazedlabs.com/about/" class="block md:px-3">
             <span>
                 About
             </span>
         </a>
     </li>
     <li>
-        <a href="#" class="block md:px-3">
-            <span>
-                Integrations
-            </span>
-        </a>
-    </li>
-    <li>
-        <a href="#" class="block md:px-3">
-            <span>
-                Pricing
-            </span>
-        </a>
-    </li>
-    <li>
-        <a href="#" class="block md:px-3">
+        <a href="https://www.blazedlabs.com/post/" class="block md:px-3">
             <span>
                 Blog
+            </span>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.blz.one/services" class="block md:px-3">
+            <span>
+                Services
+            </span>
+        </a>
+    </li>
+    <li>
+        <a href="https://www.blz.one/products" class="block md:px-3">
+            <span>
+                Products
+            </span>
+        </a>
+    </li>
+    <li>
+        <a href="https://blazed.contact/" class="block md:px-3">
+            <span>
+                Contact
             </span>
         </a>
     </li>
