--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -27,28 +27,23 @@
                 </h6>
                 <ul class="list-inside mt-4 space-y-4">
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
+                        <a href="https://blz.one/" class="hover:text-cyan-600 transition">
                             Home
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
+                        <a href="https://blazed.company/about" class="hover:text-cyan-600 transition">
                             About
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
+                        <a href="https://blazed.xyz/" class="hover:text-cyan-600 transition">
                             Blog
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Partners
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Jobs
+                        <a href="https://blazed.dev/" class="hover:text-cyan-600 transition">
+                            Development
                         </a>
                     </li>
                 </ul>
@@ -59,92 +54,87 @@
                 </h6>
                 <ul class="list-inside mt-4 space-y-4">
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Home
+                        <a href="https://blazed.world/" class="hover:text-cyan-600 transition">
+                            Blazed World
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            About
+                        <a href="https://blazed.bond/" class="hover:text-cyan-600 transition">
+                            Blazed Bond
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Blog
+                        <a href="https://blazed.city/" class="hover:text-cyan-600 transition">
+                            Blazed City
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Partners
+                        <a href="https://munch-mag.com/" class="hover:text-cyan-600 transition">
+                            Munch Magazine
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Jobs
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div>
-                <h6 class="text-lg font-medium text-cyan-900">
-                    Developers
-                </h6>
-                <ul class="list-inside mt-4 space-y-4">
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Home
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            About
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Blog
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Partners
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Jobs
+                        <a href="https://blazed.games/" class="hover:text-cyan-600 transition">
+                            Concrete Games
                         </a>
                     </li>
                 </ul>
             </div>
             <div>
                 <h6 class="text-lg font-medium text-cyan-900">
-                    Ressources
+                    Services
                 </h6>
                 <ul class="list-inside mt-4 space-y-4">
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Home
+                        <a href="https://beez.top/" class="hover:text-cyan-600 transition">
+                            Marketing
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            About
+                        <a href="https://vexio.quest/" class="hover:text-cyan-600 transition">
+                            Governance
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Blog
+                        <a href="https://ixis.space/" class="hover:text-cyan-600 transition">
+                            Sales
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Partners
+                        <a href="https://blazed.software/" class="hover:text-cyan-600 transition">
+                            Software
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="hover:text-cyan-600 transition">
-                            Jobs
+                        <a href="https://blazed.tel/" class="hover:text-cyan-600 transition">
+                            Telecommunications
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h6 class="text-lg font-medium text-cyan-900">
+                    Community
+                </h6>
+                <ul class="list-inside mt-4 space-y-4">
+                    <li>
+                        <a href="https://opencollective.com/blazed-dev/projects/blazed-one" class="hover:text-cyan-600 transition">
+                            Invest
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.alignable.com/ocean-city-nj/blazed-labs-llc" class="hover:text-cyan-600 transition">
+                            Alignable
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://blazed.contact/" class="hover:text-cyan-600 transition">
+                            Contact Us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/blazed-space/" class="hover:text-cyan-600 transition">
+                            Github
                         </a>
                     </li>
                 </ul>
@@ -152,9 +142,9 @@
         </div>
         <div class="flex justify-between px-4 py-3 rounded-md bg-gray-200 text-gray-600">
             <span>
-                &copy;<span id="year">2022</span> Blazed Labs LLC
+                &copy;<span id="year">{{ year }}</span>&nbsp;<a href="https://blazed.company/" target="_blank" class="hover:underline">Blazed Labs LLC</a>
             </span>
-            <a href="#" class="font-medium transition hover:text-cyan-600">
+            <a href="https://res.cloudinary.com/blazed-space/raw/upload/v1637201502/txt/license.txt" target="_blank" class="font-medium transition hover:text-cyan-600">
                 License
             </a>
         </div>
