--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -7,16 +7,9 @@
         </a>
     </li>
     <li>
-        <a href="https://www.blazedlabs.com/about/" class="block md:px-3">
+        <a href="https://www.blazed.company/about/" class="block md:px-3">
             <span>
                 About
-            </span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.blazedlabs.com/post/" class="block md:px-3">
-            <span>
-                Blog
             </span>
         </a>
     </li>
