--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,16 @@
-/*
 .blz-app{
     position:relative;
-    width: 750px;
+    max-width: 100%;
     margin-left:auto;
     margin-right: auto;
 }
-*/
-.blz-app{
-    max-width: 100%;
+
+main{
+    padding:10px;
+}
+/* For Galaxy Fold and XS screens (<280px viewport width) */
+@media only screen and (max-width: 280px){
+    main{
+        padding:3px;
+    }
 }
