--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,13 +1,34 @@
-.is-active{
-    text-decoration:underline;
+
+
+a{
+    padding-right:10px;
+    padding-left:10px;
 }
-@media only screen and (max-width: 1023px){
-    ul{
-        text-align:center;
-        margin-top:5px;
+.is-active{
+    text-decoration: underline;
+}
+@media only screen and (min-width: 768px){
+    a{
+        margin-right:0px;
     }
-    ul li a{
-        padding-top:10px;
-        padding-bottom:10px;
+    .auth-box{
+        display: inline;
+    }
+    .search-box{
+        margin-right: 15px;
+    }
+}
+@media only screen and (max-width: 768px){
+    a{
+        display:block;
+        text-align: center;
+        padding-top:20px;
+        padding-bottom:20px;
+    }
+    .search-box{
+        margin-top: 8px;
+    }
+    .auth-box{
+        padding-top: 18px;
     }
 }
