--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,85 +1,15 @@
-<div class="pt-32 pb-20 md:pt-40">
-    <div class="container m-auto px-6 md:px-12 lg:px-6">
-        <div class="lg:flex lg:items-center lg:gap-x-16">
-            <div class="space-y-8 lg:w-7/12">
-                <h1 class=" font-bold text-gray-900 text-4xl md:text-5xl">
-                    Welcome to Fire for Angular.
-                </h1>
-
-                <p class="text-gray-600 lg:w-11/12">
-                    This is a boilerplate for Angular with many bells and whistles included. Have a look around, and make yourself at home. 
-                </p>
-
-                <span class="block font-semibold">
-                    We are thrilled to be able to help you realize your goal!
-                </span>
-
-                <div class="grid grid-cols-3 space-x-4 md:space-x-6 md:flex">
-                    <a aria-label="add to slack" href="#" class="p-4 border border-gray-200 rounded-md hover:border-cyan-400 hover:shadow-lg">
-                        <div class="flex justify-center space-x-4">
-                            <img class="w-6" src="https://blazed.sirv.com/logo/john-mcmahon-ljjcoULkxL8-unsplash_black.png?w=128&h=128" alt="slack logo" loading="lazy" width="128" height="128">
-                            <span class="hidden font-medium md:block">Ibis Black</span>
-                        </div>
-                    </a>    
-                    <a aria-label="add to chat" href="#" class="p-4 border border-gray-200 rounded-md hover:border-green-400 hover:shadow-lg">
-                        <div class="flex justify-center space-x-4">
-                            <img class="w-6" src="https://blazed.sirv.com/logo/john-mcmahon-ljjcoULkxL8-unsplash_blue.png?w=128&h=128" alt="chat logo" loading="lazy" width="128" height="128">
-                            <span class="hidden font-medium md:block">Ibis Blue</span>
-                        </div>
-                    </a>   
-                    <a aria-label="add to zoom" href="#" class="p-4 border border-gray-200 rounded-md hover:border-blue-400 hover:shadow-lg">
-                        <div class="flex justify-center space-x-4">
-                            <img class="w-6" src="https://blazed.sirv.com/logo/john-mcmahon-ljjcoULkxL8-unsplash_red.png?w=128&h=128" alt="chat logo" loading="lazy" width="128" height="128">
-                            <span class="hidden font-medium md:block">Ibis Red</span>
-                        </div>
-                    </a>    
-                </div>
-
-                <div>
-                    🔥🌟 
-                    <span>Other integrations:</span> 
-                    <a href="https://fire-react.netlify.app/" target="_blank" class="font-semibold text-gray-700">
-                        React,
-                    </a>
-                    <a href="https://fire-svelte.netlify.app/" target="_blank" class="font-semibold text-gray-700">
-                        Svelte
-                    </a>
-                </div>
-            </div>
-
-            <div hidden class="lg:block lg:w-5/12">
-                <img src="https://blazed.sirv.com/logo/Lockscreen-Beaker.png?w=320&h=280" class="w-full" width="320" height="280">
-            </div>
-        </div>
-    </div>
+<div class="pt-0 pb-20 md:pt-10">
+    <blz-cta></blz-cta>
 </div>
 
-<div class="pb-8">
-    <div class="container m-auto px-6 md:px-12 lg:px-6">
-        <div class="py-8 px-12 bg-cyan-50 rounded-2xl">
-            <span class="block text-center font-medium text-cyan-700">
-                Trusted by your favorite giants
-            </span>
-            <div class="mt-8 flex justify-center flex-wrap items-center gap-4 md:gap-6 lg:gap-8">
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Red.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Gray.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-DarkGray.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Rainbow.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Cobalt.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-                <div class="flex items-center">
-                    <img src="https://blazed.sirv.com/logo/Beaker-Pink.png?w=150&h=122" alt="client logo" loading="lazy" width="150" height="122">
-                </div>
-            </div>
-        </div>
-    </div>
+<blz-hr></blz-hr>
+
+<div class="px-5 lg:px-10">
+    <blz-intro></blz-intro>
+</div>
+
+<blz-hr></blz-hr>
+
+<div class="lg:px-20 bg-gray-50">
+    <blz-motto></blz-motto>
 </div>
