--- a/src/styles.css
+++ b/src/styles.css
@@ -80,8 +80,7 @@ body::-webkit-scrollbar-thumb:hover{
     color: #fff;
 }
 
-body { margin: 0; 
-    /*font-family: Roboto, "Helvetica Neue", sans-serif;*/ 
+body { 
     font-family: 'Hind Vadodara', sans-serif;
 }
 
