--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,15 @@
-<div class="pt-0 pb-20 md:pt-10">
+<article class="pt-0 pb-20 md:pt-10">
     <blz-cta></blz-cta>
-</div>
+</article>
 
 <blz-hr></blz-hr>
 
-<div class="px-5 lg:px-10">
+<article class="px-5 lg:px-10">
     <blz-intro></blz-intro>
-</div>
+</article>
 
 <blz-hr></blz-hr>
 
-<div class="lg:px-20 bg-gray-50">
+<article class="lg:px-20 bg-gray-50">
     <blz-motto></blz-motto>
-</div>
+</article>
