--- a/src/app/widgets/cta/cta.component.html
+++ b/src/app/widgets/cta/cta.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="main-block relative flex flex-col md:justify-center bg-white bg-cover lg:my-10">
+<div class="main-block relative flex flex-col md:justify-center bg-white bg-cover mt-5 lg:my-10">
     <div class="flex flex-col items-center justify-center p-10 mx-auto lg:flex-row lg:max-w-6xl lg:p-0 main-block-home">
         <div class="main-block-home-inner container relative z-20 flex flex-col w-full lg:px-5 pb-1 pr-4 lg:pr-12 mb-16 text-2xl text-gray-700 lg:w-1/2 sm:px-0 md:px-10 sm:items-center lg:items-start lg:mb-0">
             <h1 class="relative z-20 text-6xl font-extrabold leading-none text-indigo-500 xl:text-7xl sm:text-center lg:text-left">
@@ -10,10 +10,10 @@
                     turning heads...
                 </span>
             </h1>
-            <h3 class="mt-4 lg:mt-8 lg:ml-8 text-2xl md:text-3xl text-gray-700">
+            <h3 class="mt-4 lg:mt-8 lg:ml-8 mb-10 text-2xl md:text-3xl text-gray-700">
                 All over, the <span class="text-orange-600">world-wide web</span>.
             </h3>
-            <div class="relative flex mt-10 ml-10 home-cta">
+            <div class="relative flex ml-10 md:ml-0 home-cta">
                 <a title="View our Services" 
                     href="/services"
                     class="group relative flex items-center btn btn-lg">
