--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,22 +1,22 @@
-<a routerLink="/home" routerLinkActive="is-active" class="hover:text-gray-900 font-bold md:font-normal">Home</a>
-<a routerLink="/services" routerLinkActive="is-active" class="hover:text-gray-900 font-bold md:font-normal">Services</a>
-<a routerLink="/products" routerLinkActive="is-active" class="hover:text-gray-900 font-bold md:font-normal">Products</a>
+<span *ngFor="let item of this.site.nav">
+    <span *ngIf="item.link !== undefined">
+        <a routerLink="{{ item.link}}" 
+            routerLinkActive="is-active"
+            class="inline-flex hover:text-gray-900 font-bold md:font-normal">
+            {{ item.text }}
+        </a>
+    </span>
+    <span *ngIf="item.href !== undefined">
+        <a href="{{ item.href}}" 
+            routerLinkActive="is-active"
+            class="inline-flex hover:text-gray-900 font-bold md:font-normal">
+            {{ item.text }}
+        </a>
+    </span>
+</span>
 <span class="hidden lg:inline">
     &nbsp; | &nbsp;
 </span>
-<!--
-<label for="blz-search-modal">
-    <a title="Search Blazed..." class="search-box cursor-pointer border-t border-b border-1 border-gray-400 md:border-0 bg-gray-300 md:bg-transparent hover:text-gray-600 hover:opacity-75">
-        <svg class="w-5 h-5 text-gray-500 inline" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg>
-        <span class="pl-2">
-            Search
-        </span>
-    </a>
-</label>
-<span class="hidden lg:inline">
-    &nbsp; | &nbsp;
-</span>
--->
-<a href="https://blz.one/" class="btn btn-outline">
+<a href="https://blz.one/" class="btn btn-outline mx-5">
     Login / Register
 </a>
